--- a/Projeto-Login/login.html
+++ b/Projeto-Login/login.html
@@ -19,7 +19,7 @@
                     <h1>Login</h1>
                     <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                     <form action="login.php" method="post" autocomplete="on">
-                        <div class="camo">      
+                        <div class="campo">      
                             <span class="material-icons">
                                 person
                                 </span>                      
@@ -34,7 +34,7 @@
                             <label for="isenha">Senha</label>
                         </div>
                         <input type="submit" value="entrar">
-                        <a href="esqueciasenha.html">Esqueci a senha <span class="material-icons">mail</span></a>
+                        <a href="esqueciasenha.html" class="botao">Esqueci a senha <span class="material-icons">mail</span></a>
                     </form>
                 </div>
             </section>
